Set up some basic composibles to get and transform data; added stubbed header; added mdi icon library

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,12 +13,13 @@
     "skipLibCheck": true,
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
-    "noUnusedLocals": true,
     "strictNullChecks": true,
+    "noImplicitAny": false,
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
     "types": [
-      "vite/client"
+      "vite/client",
+      "unplugin-icons/types/vue"
     ],
     "paths": {
       "@/*": [
