--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
   "dependencies": {
     "@vueuse/core": "^9.13.0",
     "axios": "^1.4.0",
+    "focus-visible": "^5.2.0",
     "pinia": "^2.0.35",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.1.50",
     "@types/node": "^18.15.11",
     "@typescript-eslint/parser": "^5.59.2",
     "@vitejs/plugin-vue": "^4.1.0",
+    "@vue/compiler-sfc": "^3.2.47",
     "@vue/test-utils": "^2.3.2",
     "eslint": "^8.38.0",
     "eslint-plugin-vue": "^9.11.0",
@@ -39,8 +42,10 @@
     "lint-staged": "^13.2.1",
     "pnpm": "^8.2.0",
     "prettier": "^2.8.8",
+    "sass": "^1.62.1",
     "simple-git-hooks": "^2.8.1",
     "typescript": "^5.0.4",
+    "unplugin-icons": "^0.16.1",
     "vite": "^4.2.1",
     "vitest": "^0.30.1",
     "vue-eslint-parser": "^9.1.1",
