--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,8 +8,9 @@
   "editor.bracketPairColorization.enabled": true,
   "editor.codeActionsOnSave": {
     "source.fixAll": false,
-    "source.fixAll.eslint": true,
-    "source.organizeImports": false
+    "source.fixAll.eslint": false,
+    "source.organizeImports": false,
+    "source.fixall.prettier": true,
   },
   "editor.unicodeHighlight.ambiguousCharacters": true,
   "editor.unicodeHighlight.includeStrings": true,
