--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,7 @@
     "source.fixAll": false,
     "source.fixAll.eslint": false,
     "source.organizeImports": false,
-    "source.fixall.prettier": true,
+    "source.fixall.prettier": true
   },
   "editor.unicodeHighlight.ambiguousCharacters": true,
   "editor.unicodeHighlight.includeStrings": true,
